fix MDEV-4737 Server crashes in spider_mysql_handler::append_match_against on SELECT .. MATCH .. AGAINST .. BOOLEAN MODE